[package]
name = "advent-utils"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2018"

[features]
default = ["argparse"]

nom-macro = []
argparse = ["envy", "serde", "serde_derive"]

[dependencies]
envy = { version = "0.3", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }

[dev-dependencies]
nom = "^4.1"
