[package]
name = "advent-utils"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2018"

[features]
default = ["argparse"]

nom-macro = []
argparse = ["envy", "serde"]

[dependencies]
envy = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
nom = "^4.1"
