[package]
name = "day-6"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2018"

[lib]
name = "day_6_parser"
path = "src/lib/lib.rs"

[dependencies]
nom = "^4.1"
serde = { version = "1", features = ["derive"] }

[dependencies.advent-utils]
path = "../advent-utils"
features = ["nom-macro"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench_parser"
harness = false
